--- a/style.css
+++ b/style.css
@@ -30,5 +30,5 @@
     background-color: #fff;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-out;
+    transition: 0.3s;
 }
